# fpe

./: .travis.yml  LICENSE  LICENSE.md  README.md  ff1test.hs  fpe.cabal  package.yaml  stack.yaml
.github/workflows/: haskell.yml
FPE/: FF1.hs
test/: ff1test.hs
