cabal-version: 2.2

name:           fpe
version:        0.1.2
synopsis:       Format-preserving encryption.
category:       Cryptography
homepage:       https://github.com/galenhuntington/fpe#readme
bug-reports:    https://github.com/galenhuntington/fpe/issues
author:         Galen Huntington
maintainer:     Galen Huntington
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-doc-files:
    README.md

source-repository head
  type: git
  location: https://github.com/galenhuntington/fpe

common opts
  default-language: GHC2021
  ghc-options: -Wall -Wredundant-constraints -Wcompat -O2
  build-depends:
      base >=4.16 && <5
    , bytestring >=0.10 && <0.13
    , vector >=0.12 && <0.14

library
  import: opts
  exposed-modules:
    FPE.FF1
  build-depends:
    integer-logarithms >=1 && <1.1
  hs-source-dirs:
    ./

test-suite suite
  import: opts
  type: exitcode-stdio-1.0
  main-is: ff1test.hs
  hs-source-dirs:
      test
  build-depends: crypton, fpe

